Rewired logic of singup and login and also check for account on login
