# docs/swagger.json
@@ -12,6 +12,26 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/auth/keycloak/login": {
+            "get": {
+                "description": "Login by creating a token",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login by creating a token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/keycloak/logout": {
             "get": {
                 "description": "Logout by deleting the token.",
@@ -19,7 +39,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "KeyCloak"
+                    "Auth"
                 ],
                 "summary": "Logout by deleting the token",
                 "responses": {
@@ -34,14 +54,14 @@
         },
         "/auth/keycloak/token": {
             "get": {
-                "description": "Login by creating a token",
+                "description": "Get the token for a user",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "KeyCloak"
+                    "Auth"
                 ],
-                "summary": "Login by creating a token",
+                "summary": "Get the token",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -59,7 +79,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "KeyCloak"
+                    "Auth"
                 ],
                 "summary": "OAuth endpoint",
                 "responses": {
